fix button mobile rending issue and speed up code generator

--- a/CodeGenerator/app/assets/stylesheets/code.scss
+++ b/CodeGenerator/app/assets/stylesheets/code.scss
@@ -79,6 +79,9 @@ h1 {
 	font-size: 16px;
 	padding: 10px 0px;
 	width: 300px;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 
 .gen-button:hover {
@@ -231,6 +234,9 @@ h1 {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	width: 100%;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 
 // CODE COUNTER
